[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/img/orb.png" type="Texture" id=1]
[ext_resource path="res://assets/img/sparkle.png" type="Texture" id=2]
[ext_resource path="res://scenes/Launcher.gd" type="Script" id=3]
[ext_resource path="res://assets/sfx/grab_loop.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sfx/thunk.ogg" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "sparkle_orbit"
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("sparkle1:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.15, 4.12314, 0.15, -4.12314, -10, -0.25, 0, 0.25, 0, 10, -0.25, 0, 0.25, 0, 0, -0.1, 3.16704, 0.1, -3.16704 ),
"times": PoolRealArray( 0, 0.5, 1.5, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("sparkle1:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.14, -4.84939, 0.14, 4.84939, 10, -0.25, 0, 0.25, 0, -10, -0.25, 0, 0.25, 0, 0, -0.09, -3.11373, 0.09, 3.11373 ),
"times": PoolRealArray( 0, 0.5, 1.5, 2 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("sparkle2:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.68302, 0.68302 ),
"update": 0,
"values": [ Vector2( 10, 10 ), Vector2( -10, -10 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("sparkle1:show_behind_parent")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("sparkle1:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("sparkle1:flip_v")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("sparkle2:show_behind_parent")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("sparkle2:flip_h")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.5, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("sparkle2:flip_v")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.5, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 43.0

[node name="launcher" type="Node2D"]
script = ExtResource( 3 )

[node name="orb" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="sparkle1" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( -2.28217, 2.28217 )
texture = ExtResource( 2 )

[node name="sparkle2" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( -9.70205, -9.70205 )
texture = ExtResource( 2 )
flip_v = true

[node name="SparkleAnimation" type="AnimationPlayer" parent="."]
autoplay = "sparkle_orbit"
playback_speed = 2.4
anims/sparkle_orbit = SubResource( 1 )

[node name="Attractor" type="Area2D" parent="."]
space_override = 3
gravity_point = true
gravity_vec = Vector2( 0, 0 )
gravity = 1000.0
linear_damp = 3.0
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attractor"]
shape = SubResource( 2 )

[node name="LaunchCountdown" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="Reset" type="Timer" parent="."]
one_shot = true

[node name="RPTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="GrabSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "grabby"

[node name="LaunchSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="Attractor" to="." method="_on_Attractor_body_entered"]
[connection signal="body_exited" from="Attractor" to="." method="_on_Attractor_body_exited"]
[connection signal="timeout" from="LaunchCountdown" to="." method="_on_LaunchCountdown_timeout"]
[connection signal="timeout" from="Reset" to="." method="_on_Reset_timeout"]
[connection signal="timeout" from="RPTimer" to="." method="_on_RPTimer_timeout"]
